

find_package(Threads REQUIRED)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
set(Boost_FIND_QUIETLY ON CACHE BOOL "Find Boost Quietly" FORCE)
include_directories(${Boost_INCLUDE_DIRS})

set(ELIB_AVAILABLE_FEATURES "")
get_directory_property(value DIRECTORY ${ELIB_ROOT_PATH}/src COMPILE_DEFINITIONS)
if (value)
    foreach(item ${value})
        list(FIND flags "-D${item}" FOUND)
        if (FOUND EQUAL -1 AND NOT ${item} MATCHES "ELIB_FILESYSTEM_UNIT_TEST_PATH(.*)")
            add_definitions(-D${item})
            list(APPEND ELIB_AVAILABLE_FEATURES ${item})
        endif()
    endforeach()
endif()

add_definitions( 
    -DELIB_FILESYSTEM_UNIT_TEST_PATH="${CMAKE_CURRENT_LIST_DIR}/filesystem"
  )

get_directory_property(value DIRECTORY . COMPILE_DEFINITIONS)
message(STATUS "DEFS: ${value}")

add_executable(SAMPLEOBJ sample_test.pass.cpp)
target_link_libraries(SAMPLEOBJ elib ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})
set_target_properties(SAMPLEOBJ PROPERTIES EXCLUDE_FROM_ALL ON EXCLUDE_FROM_DEFAULT_BUILD ON)

include (FindPythonInterp)
if (PYTHONINTERP_FOUND)

  set(ELIB_TEST_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
  

  set(LIT_EXECUTABLE "${ELIB_ROOT_PATH}/packages/lit/lit.py" CACHE FILEPATH "Path to LLVM's lit.py.")
  set(LIT_ARGS_DEFAULT "-sv" CACHE STRING "Default lit args")
  set(LIT_ARGS "${LIT_ARGS_DEFAULT}")
  separate_arguments(LIT_ARGS)

  set(SAMPLE_OBJECT "SAMPLEOBJ")

  set(AUTO_GEN_COMMENT "## Autogenerated by elib configuration.\n# Do not edit!")
  
  configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/lit.site.cfg.in
    ${CMAKE_CURRENT_BINARY_DIR}/lit.site.cfg
    @ONLY)

  add_custom_target(check-elib
    COMMAND ${PYTHON_EXECUTABLE}
            ${LIT_EXECUTABLE}
            ${LIT_ARGS}
            ${CMAKE_CURRENT_BINARY_DIR}
    DEPENDS elib
    COMMENT "Running elib tests")
else()
  message(WARNING "Could not find Python, no check target will be available!")
endif()
